Homepage: http://tabsrmm.sourceforge.net
SF.NET Project Page: http://www.sourceforge.net/projects/tabsrmm/
Support: http://hell.at.eu.org/forums/

                               --------------------
						
				    Version History:
				    ================
+ : new feature
* : changed
! : bufgix						
- : feature removed or disabled because of pending bugs

Version 0.9.9.92 - 2005/03/31

        ! fixed broken dialog layout on forward message
        
        ! nicknames may again contain characters like { and } w/o messing up the message
          log display.
        
        * status bar remembers typing notification state
        
        * static avatar code changed. It's now really static, although, internally
          it is using the dynamic resizing code aswell. Static avatar mode can be
          selected on the "General" options page, and you can specify a height limit for
          avatars. Bigger images will be scaled down accordingly. When moving the splitter
          upwards, the image will be vertically centered within the available space.
          The splitter position may be adjusted to make enough space for the avatar.
          
          NOTE: If you set the limit to 0, the avatars are hard limited to 100 pixels
          in height (MSN appears to have the biggest avatars at 96x96 pixels).

        ! GUI fixes (option pages)...
        
        + it is now possible to set RTL as default text direction (Message Log options
          page). The per-contact override is still working though, so if you have RTL set
          as default, you can switch to LTR for some contacts.
        
        ! splitter position is now decoupled from the message log settings. There is a new
          submenu in the protocol menu dropdown on the toolbar where you can setup splitter
          parameters (global, local, private).
          
          Global: all tabs / windows use the same splitter position. Note that, when using